Melhoras no LoadTest: - recebe servidor e # de conexões - Usa Virtual Threads (para não exaurir o meu computador antes do serivdor) - Sleep de 1ms entre conexões